Fix text alignment in chrome for cron tooltips

--- a/public/rearview/less/rearview.less
+++ b/public/rearview/less/rearview.less
@@ -899,7 +899,7 @@ input, button, select, textarea {
 
             .tooltip-inner {
                 max-width : 500px;
-
+                text-align : left;
                 .proxima-regular(12px);
 
                 table {
@@ -1076,7 +1076,7 @@ input, button, select, textarea {
 
             .tooltip-inner {
                 max-width : 500px;
-
+                text-align : left;
                 .proxima-regular(12px);
 
                 table {
